# xgnitive

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  requirements.txt
cmake/: BuildTeo-openrave-models.cmake  FindAquila.cmake  FindECF.cmake
cmake/template/: XGNITIVEConfig.cmake.in
cmake/templates/: XGNITIVEConfig.cmake.in
demonstration-feature-selection/datasets/: README.md
demonstration-feature-selection/src/: LICENSE.TXT  libdbscan.py  libmddtw.py  libtools.py  main-demons-selector.py  main-feature-selector.py  main_demons_selector.py  main_feature_selector.py  row-selector.py
doc/: Doxyfile  groups.dox  how-to-rllab.md  main.dox  xgnitive-install.md  xgnitive_install.md  xgnitive_install_aquila_on_ubuntu_14_04.dox  xgnitive_install_cmake_on_ubuntu_14_04.dox  xgnitive_install_on_ubuntu_14_04.dox  xgnitive_install_ubuntu_14_04.md  xgnitive_install_yarp_on_ubuntu_14_04.dox
doc/bib/: morante2014action.bib  morante2014on.bib  morante2015automatic.bib  morante2015humanoid.bib  morante2016phd.bib  victores2013semantic.bib  victores2013towards.bib  victores2014on.bib  victores2014phd.bib
experiments/: 0-0-30000-100E-50.txt  1-40-30000-100-50.txt  2-40-1000E-10-30.txt  3-0-1000-10-30.txt  DataFull.txt  DataIET.txt  DataOET++.txt  FileNomenclature.txt  OETPerTime.ods  OETfit.ods  boxplot.py  data_extractor_evaluations.py  eval_plot.py  featuretrajectoryOET.txt  multipleExecutionsBatch.sh  percentageOET.txt  plot.py  trajectoryPlot.py
experiments/CgdaStandalone/: 4-Fuzzy-500I-10-30.txt  FileNomenclature.md  FitnessGoalExperiments.txt
generalization/src/: cgda-generalization.py
libraries/: CMakeLists.txt
libraries/ActionRecognitionLib/: ActionRecognition.hpp  CMakeLists.txt  DtwActionRecognition.cpp  DtwActionRecognition.hpp  DtwRecognition.cpp
libraries/CdgaRecognitionLib/: CMakeLists.txt  CdgaRecognition.hpp  DtwCdgaRecognition.cpp  DtwCdgaRecognition.hpp
libraries/CgdaRecognitionLib/: CMakeLists.txt  CgdaRecognition.hpp  DtwCgdaRecognition.cpp  DtwCgdaRecognition.hpp
libraries/EcfComponents/: AlgConstrainedSST.cpp  AlgConstrainedSST.hpp  AlgPSOFuzzy.cpp  AlgPSOFuzzy.hpp  AlgPSOInheritance.cpp  AlgPSOInheritance.hpp  CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt  ExampleLibrary.cpp  ExampleLibrary.hpp
libraries/RecognitionLib/: CMakeLists.txt  DtwRecognition.cpp  DtwRecognition.hpp
programs/: CMakeLists.txt  multipleExecutionsBatch.sh
programs/cdgaOptimization/: CMakeLists.txt  CgdaOptimization.cpp  CgdaOptimization.hpp  cdgaOptimization.cpp  cdgaOptimization.hpp  main.cpp
programs/cgdaExecution/: CMakeLists.txt  CgdaExecution.cpp  CgdaExecution.hpp  CgdaFitnessFunction.cpp  CgdaFitnessFunction.hpp  CgdaIronFitnessFunction.cpp  CgdaIronFitnessFunction.hpp  CgdaPaintFitnessFunction.cpp  CgdaPaintFitnessFunction.hpp  EvMono.cpp  EvMono.hpp  README.md  evMono_ecf_params.xml  main.cpp
programs/cgdaExecutionIET/: CMakeLists.txt  CgdaConstrainedPaintFitnessFunction.cpp  CgdaConstrainedPaintFitnessFunction.hpp  CgdaConstrainedWaxFitnessFunction.cpp  CgdaConstrainedWaxFitnessFunction.hpp  CgdaExecutionIET.cpp  CgdaExecutionIET.hpp  CgdaFitnessFunction.cpp  CgdaFitnessFunction.hpp  CgdaPaintFitnessFunction.cpp  CgdaPaintFitnessFunction.hpp  CgdaWaxFitnessFunction.cpp  CgdaWaxFitnessFunction.hpp  EvMono.cpp  EvMono.hpp  README.md  main.cpp
programs/cgdaExecutionOET/: CMakeLists.txt  README.md
programs/cgdaOptimization/: CMakeLists.txt  CMakeLists_merge.txt  CgdaOptimization.cpp  CgdaOptimization.hpp  EvMono.cpp  EvMono.hpp
programs/depthToMesh/: CMakeLists.txt  DepthToMesh.cpp  DepthToMesh.hpp  main.cpp
programs/drl/: README.md  grid_2D_world.py  grid_3D_world.py  grid_3D_yarp.py  grid_world.py  teo_iron_discrete_yarp.py  teo_paint_discrete_yarp.py  teo_paint_discrete_yarp_DDPG.py  trpo_gym_cartpole.py
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  ExampleProgram.hpp  main.cpp
programs/gmmExecution/: CMakeLists.txt  GMMExecution.cpp  GMMExecution.hpp  GMMIronFitnessFunction.cpp  GMMIronFitnessFunction.hpp  GMMPaintFitnessFunction.cpp  GMMPaintFitnessFunction.hpp  IK-hIK-howto.md  main.cpp
programs/kinbody-creator/: README.md  openraveMapGenerator.py  openraveMapGeneratorFile.py  wallCreator.py  wrinkleCreator.py
programs/models/: teo_cgda_iros.env.xml  wall.kinbody.xml
programs/paintSquaresOnScreen/: CMakeLists.txt  README.md  paintSquaresOnScreen.py  paintSquaresOnScreenGradient.py
programs/wall-creator/: README.md  wallCreator.py  wrinkleCreator.py
scripts/: wall_creator.py
scripts/admin/: update-dox.sh
scripts/gnome/: xgnitive.desktop
scripts/travis/: cache-ecf.sh  git-cache-dependency.sh
share/: CMakeLists.txt  initAll.sh  iros2017partialSim.sh
share/2018-icra/: README.md
share/2018-icra/scripts/: 2018-icra-dump.xml  2018-icra-ironSim.xml  2018-icra-paint-pga.xml  2018-icra-paint.xml  icra2018-ironSim.xml
share/2018-iros/: README.md
share/2018-iros/scripts/: 2018-iros-iron-record.xml  2018-iros-ironSim.xml  2018-iros-paint-record.xml  2018-iros-paintSquares-real.xml  2018-iros-paintSquares-sim.xml  2018-iros-real-paint.xml
share/icra2018/: README.md
share/icra2018/scripts/: icra2018-dump.xml  icra2018-ironSim.xml  icra2018-paint.xml  icra2018data.xml
share/iros2017/scripts/: iros2017-pga.xml  iros2017.xml
share/iros2018/scripts/: iros2018-ironSim.xml  iros2018-paint-pga.xml  iros2018-real-paint.xml
share/models/: CMakeLists.txt  iron-wrinkle.kinbody.xml  ironWrinkle.kinbody.xml  teo_cgda_iros.env.xml  teo_cgda_iros_iron.env.xml  wall.kinbody.xml
share/paintSquaresOnScreen/scripts/: paintSquaresOnScreen-real.xml  paintSquaresOnScreen-sim.xml
test/: CMakeLists.txt  testActionRecognitionLib.cpp  testCdgaRecognitionLib.cpp  testCgdaRecognitionLib.cpp  testRecognitionLib.cpp
tests/: CMakeLists.txt  testCgdaRecognitionLib.cpp
tools/box_plot/: OET-Paint-Percentage.txt  box_plot.py
tools/mean-variance/: mean-var.py  results-mean.txt  results-var.txt
tools/plot_trajectories/: FTE-Paint-Percentage.txt  Generalized.txt  IET-Paint-Percentage.txt  Trajectory2.txt  (+8 more)
(+432 files in other folders)
